# llm-bedrock-ai21

./: llm_bedrock_ai21.py  pyproject.toml
